--- a/D2CharacterPlanner.csproj
+++ b/D2CharacterPlanner.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="BasiqDatabase">
       <HintPath>..\MET\MET\bin\Debug\BasiqDatabase.dll</HintPath>
     </Reference>
